# code-index-mcp

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  .trivyignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLOUD_INGESTION_GUIDE.md  DEPLOYMENT_LIFECYCLE.md  Dockerfile  LLM_OPTIMIZED_INDEX_REPLACEMENT_PLAN.md  MCP_SERVER_TEST_GUIDE.md  PLAN.md  README.md  README_ja.md  README_ko.md  README_zh.md  RELEASE_NOTE.txt  SCIP_OFFICIAL_STANDARDS.md  SCIP_RELATIONSHIP_IMPLEMENTATION_PLAN.md  SCIP_SYMBOL_ANALYZER_REFACTORING_PLAN.md  SECURITY_FIXES_SUMMARY.md  TIMEOUT_FIXES.md  benchmark_scip_framework.py  demo_index.json  demo_indexing.py  diff.txt  docker-compose.yml  monitor_logs.sh  parse_scip_index.py  pyproject.toml  query_db.py  requirements.txt  run.py  temp_js_end.py  temp_js_strategy.py  test_chunker.py  (+11 more)
.cursor/: CONVERSION_REPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  RULES_SUMMARY.md  WEEK1_COMPLETION_REPORT.md
.cursor/rules/: README.md  agent-workflow.mdc  coding-standards.mdc  commit-guidelines.mdc  cost-conscious-development.mdc  documentation-workflow.mdc  local-testing-first.mdc  security-rules.mdc  testing-requirements.mdc
.github/: dependabot.yml
.github/workflows/: delete-gcp.yml  dependabot-auto-merge.yml  deploy-gcp.yml  e2e-test-alloydb.yml  publish-to-pypi.yml  security-scan.yml
deployment/gcp/: ALLOYDB_SETUP.md  ANSIBLE_DEPLOYMENT_SUMMARY.md  ANSIBLE_MIGRATION_GUIDE.md  AUTHENTICATION_GUIDE.md  AUTH_IMPLEMENTATION_SUMMARY.md  BASH_TO_ANSIBLE_MIGRATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_TEST_GUIDE.md  Dockerfile  GIT_SYNC_DEPLOYMENT_GUIDE.md  GIT_SYNC_IMPLEMENTATION.md  GIT_SYNC_TEST_RESULTS.md  LOCAL_POSTGRES_GUIDE.md  MIGRATION_COMPLETE.md  QUICKSTART_AUTH.md  QUICKSTART_SEMANTIC_SEARCH.md  QUICK_DEPLOY.md  README.md  SCHEMA_ANALYSIS.md  SCHEMA_FIX_OCT29.md  SEMANTIC_SEARCH_DEPLOYMENT.md  add-git-provenance-columns.sql  add-git-provenance.sql  adr-schema-enhanced.sql  alloydb-dev.tf  alloydb-schema.sql  apply_alloydb_schema.py  cleanup-job.yaml  deploy-lifecycle.sh  docker-compose.yml  local-postgres-schema.sql  postgres-schema.sql  terraform-alloydb.sh  test-adr-schema.sh  test-cleanup-local.sh  test-local-postgres.sh  test-local.sh
deployment/gcp/ansible/: .gitignore  ALLOYDB_DEPLOYMENT_FIX.md  MCP_VALIDATION.md  QUICK_TEST.md  README.md  TESTING_QUICKSTART.md  UTILITIES.md  ansible.cfg  api-key-demo-user-dev.txt  api-key-test-automation-dev.txt  deploy.yml  quickstart.sh  requirements.yml  test-clean-project.sh  utilities.yml  validate.yml
docs/: ALLOYDB_SCHEMA_STATUS.md  ALLOYDB_URL_ENCODING_FIX.md  API_KEY_MANAGEMENT.md  ARCHITECTURE_CLEANUP_OCT27.md  CI_CD_SETUP_GUIDE.md  CI_CD_SETUP_GUIDE_AWS.md  CI_CD_SETUP_GUIDE_GCP.md  CI_CD_SETUP_GUIDE_OPENSHIFT.md  CLOUD_INGESTION_DISCOVERY.md  CLOUD_RUN_DEPLOYMENT_OCT27.md  CLOUD_RUN_DEPLOYMENT_SUCCESS.md  DEPLOYMENT.md  E2E_IMPLEMENTATION_COMPLETE.md  E2E_TESTING_GUIDE.md  E2E_TESTING_PLAN.md  EMBEDDING_MODEL_RECOMMENDATION.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_PLAN.md  LOCAL_CLOUD_TESTING_ALIGNMENT.md  LOCAL_CLOUD_TEST_VALIDATION.md  LOCAL_DEVELOPMENT.md  MCP_TESTING_INTEGRATION_PLAN.md  TEST_SUMMARY_2025-11-06.md  VERTEX_AI_EMBEDDING_FIX.md
docs/adrs/: 0001-mcp-stdio-protocol-cloud-deployment-constraints.md  0002-cloud-run-http-deployment-with-auto-cleanup.md  0003-google-cloud-code-ingestion-with-alloydb.md  0004-aws-code-ingestion-with-aurora-and-bedrock.md  0005-openshift-code-ingestion-with-milvus.md  0006-aws-http-deployment-with-auto-cleanup.md  0007-openshift-http-deployment-with-auto-cleanup.md  0008-git-sync-ingestion-strategy.md  0009-ansible-deployment-automation.md  0010-mcp-server-testing-with-ansible.md  0011-cicd-pipeline-and-security-architecture.md  README.md
src/code_index_mcp/: __init__.py  constants.py  project_settings.py  server.py
src/code_index_mcp/admin/: __init__.py  cleanup.py  run_cleanup.py  webhook_handler.py
src/code_index_mcp/analyzers/: __init__.py  analysis_result.py  analyzer_factory.py  base_analyzer.py  default_analyzer.py  java_analyzer.py  javascript_analyzer.py  objective_c_analyzer.py  python_analyzer.py  zig_analyzer.py
src/code_index_mcp/embeddings/: __init__.py  vertex_ai.py
src/code_index_mcp/indexing/: __init__.py  builder.py  deep_index_manager.py  duplicate_detection.py  index_provider.py  json_index_builder.py  json_index_manager.py  models.py  qualified_names.py  relationships.py  scanner.py  scip_builder.py  shallow_index_manager.py  unified_index_manager.py
src/code_index_mcp/ingestion/: __init__.py  chunker.py  git_manager.py  (+2 more)
src/scripts/: inspect_doc_symbols.py
test/: README.md
tests/: README.md  __init__.py  run_all_enhanced_tests.py
tests/admin/: test_webhook_handler.py
tests/ansible/: ALLOYDB_VALIDATION_REPORT.md  HOW_TO_SHARE_WITH_DEVELOPER.md  ISSUE_SUMMARY.md  PHASE_2A1_VALIDATION_REPORT.md  README.md  SEMANTIC_SEARCH_VALIDATION_REPORT.md  TESTING_ISSUE_REPORT.md  ansible.cfg  claude-desktop-config-test.json  debug-ingestion.yml  example-multi-transport-testing.yml  regression-report-dev-1762102400.md  regression-report-dev-1762102694.md  regression-report-dev-1762494348.md  requirements.yml  test-claude-desktop-readiness.yml  test-cloud.yml  test-debug.yml  test-documcp.yml  test-e2e-db-reset.yml  test-e2e-full-redeploy.yml  test-llm-integration.yml  test-local.yml  test-quick.yml  test-regression.yml  test-report-cloud-dev-1762101666.md  test-report-cloud-dev-1762107694.md  test-report-cloud-dev-1762270435.md  test-report-cloud-dev-1762464448.md  test-report-cloud-dev-1762493839.md  test-report-cloud-test-1762269337.md  test-report-cloud-test-1762269353.md  test-report-cloud-unknown-1762478119.md  test-report-semantic-search-1762272876.md  test-report-semantic-search-1762273088.md  test-report-semantic-search-1762273129.md  test-report-semantic-search-1762273927.md  test-report-semantic-search-1762275040.md  test-report-semantic-search-1762275515.md  test-report-semantic-search-1762276939.md  (+2 more)
tests/ingestion/: test_git_manager.py
tests/search/: test_search_filters.py
(+278 files in other folders)
