[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-index-mcp"
version = "2.1.0"
description = "Code indexing and analysis tools for LLMs using MCP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "johnhuang316"}
]
dependencies = [
    "mcp>=0.3.0",
    "watchdog>=3.0.0",
    "protobuf>=4.21.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-java>=0.20.0",
    "tree-sitter-c>=0.20.0",
    "pathspec>=0.12.1",
]

[project.urls]
Homepage = "https://github.com/johnhuang316/code-index-mcp"
"Bug Tracker" = "https://github.com/johnhuang316/code-index-mcp/issues"

[project.scripts]
code-index-mcp = "code_index_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}
