[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-index-mcp"
version = "2.4.1"
description = "Code indexing and analysis tools for LLMs using MCP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "johnhuang316"}
]
dependencies = [
    "mcp>=0.3.0",
    "watchdog>=3.0.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-java>=0.20.0",
    "tree-sitter-zig>=0.20.0",
    "pathspec>=0.12.1",
    "msgpack>=1.0.0",
    "numpy>=1.24.0",  # For embeddings (mock and real)
]

[project.optional-dependencies]
# Google Cloud Platform deployment (ADR 0002, 0003)
gcp = [
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-aiplatform>=1.38.0",  # For Vertex AI embeddings (ADR 0003)
    "psycopg2-binary>=2.9.11",  # For AlloyDB connection (ADR 0003) - CVE-2024-52802/52803/52804 fixed in 2.9.11
]
# AWS deployment (ADR 0004, 0006) - future
aws = [
    "boto3>=1.28.0",
]
# All cloud providers
cloud = [
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-storage>=2.10.0",
    "boto3>=1.28.0",
]

[project.urls]
Homepage = "https://github.com/johnhuang316/code-index-mcp"
"Bug Tracker" = "https://github.com/johnhuang316/code-index-mcp/issues"

[project.scripts]
code-index-mcp = "code_index_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

# Bandit security linting configuration
# Reference: ADR 0011 - CI/CD Pipeline and Security Architecture
[tool.bandit]
# Directories to exclude from scanning
exclude_dirs = [
    "tests",
    "test",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

# Tests to skip
skips = [
    "B101",  # assert_used - common in tests, not a security issue
    "B601",  # paramiko_calls - we don't use paramiko
]

# Tests to run (security-focused)
tests = [
    "B201",  # flask_debug_true
    "B301",  # pickle usage
    "B302",  # marshal usage
    "B303",  # MD5 usage
    "B304",  # cipher usage
    "B305",  # cipher_modes
    "B306",  # mktemp_q
    "B307",  # eval usage
    "B308",  # mark_safe usage
    # B309 removed - deprecated test
    "B310",  # urllib_urlopen
    "B311",  # random usage
    "B312",  # telnetlib usage
    "B313",  # xml_bad_cElementTree
    "B314",  # xml_bad_ElementTree
    "B315",  # xml_bad_expatreader
    "B316",  # xml_bad_expatbuilder
    "B317",  # xml_bad_sax
    "B318",  # xml_bad_minidom
    "B319",  # xml_bad_pulldom
    "B320",  # xml_bad_etree
    "B401",  # import_telnetlib
    "B402",  # import_ftplib
    "B403",  # import_pickle
    "B404",  # import_subprocess
    "B405",  # import_xml_etree
    "B406",  # import_xml_sax
    "B407",  # import_xml_expat
    "B408",  # import_xml_minidom
    "B409",  # import_xml_pulldom
    "B410",  # import_lxml
    "B411",  # import_xmlrpclib
    "B412",  # import_httpoxy
    "B413",  # import_pycrypto
    "B501",  # request_with_no_cert_validation
    "B502",  # ssl_with_bad_version
    "B503",  # ssl_with_bad_defaults
    "B504",  # ssl_with_no_version
    "B505",  # weak_cryptographic_key
    "B506",  # yaml_load
    "B507",  # ssh_no_host_key_verification
    # B601 skipped in skips section (paramiko not used)
    "B602",  # subprocess_popen_with_shell_equals_true
    "B603",  # subprocess_without_shell_equals_true
    "B604",  # any_other_function_with_shell_equals_true
    "B605",  # start_process_with_a_shell
    "B606",  # start_process_with_no_shell
    "B607",  # start_process_with_partial_path
    "B608",  # hardcoded_sql_expressions
    "B609",  # linux_commands_wildcard_injection
    "B610",  # django_extra_used
    "B611",  # django_rawsql_used
    "B701",  # jinja2_autoescape_false
    "B702",  # use_of_mako_templates
    "B703",  # django_mark_safe
]

# Confidence level filter
[tool.bandit.any_other_function_with_shell_equals_true]
no_shell = [
    "os.execl",
    "os.execle",
    "os.execlp",
    "os.execlpe",
    "os.execv",
    "os.execve",
    "os.execvp",
    "os.execvpe",
    "os.spawnl",
    "os.spawnle",
    "os.spawnlp",
    "os.spawnlpe",
    "os.spawnv",
    "os.spawnve",
    "os.spawnvp",
    "os.spawnvpe",
    "os.startfile",
]

# Severity level (LOW, MEDIUM, HIGH)
[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests/*.py"]
